[gd_scene load_steps=6 format=3 uid="uid://3fym5kap4wxd"]

[ext_resource type="Script" uid="uid://bm4fjwesnjcq1" path="res://content/base/door.gd" id="1_nioso"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nioso"]
size = Vector3(4, 6, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2sy7h"]
size = Vector3(4, 6, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nioso"]
albedo_color = Color(0.5242167, 0.2595073, 0.6425664, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2sy7h"]
size = Vector3(7, 8, 3)

[node name="Door" type="Node3D"]
script = ExtResource("1_nioso")

[node name="Collision" type="StaticBody3D" parent="."]

[node name="Shape" type="CollisionShape3D" parent="Collision"]
shape = SubResource("BoxShape3D_nioso")

[node name="DebugVisuals" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_2sy7h")
surface_material_override/0 = SubResource("StandardMaterial3D_nioso")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 8, 0, 0, 0)
use_collision = true
collision_mask = 0

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.5, 0)
size = Vector3(7, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
size = Vector3(7, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
size = Vector3(1, 6, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
size = Vector3(1, 6, 1)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 5, 0)
pixel_size = 0.05
alpha_cut = 1
texture_filter = 0
text = "^ ^ ^  NORTH ^ ^ ^"

[node name="NorthOpening" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="NorthOpening"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -1)
shape = SubResource("BoxShape3D_2sy7h")

[node name="SouthOpening" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="SouthOpening"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -1)
shape = SubResource("BoxShape3D_2sy7h")

[connection signal="body_entered" from="NorthOpening" to="." method="on_entered_north"]
[connection signal="body_entered" from="SouthOpening" to="." method="on_entered_south"]
